# naaf

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  conftest.py  docker-compose.yml  pyproject.toml
docs/: TODO.md  (+6 more)
libs/db/: pyproject.toml
libs/db/src/naaf_db/: __init__.py  _query.py  async_repository.py  async_uow.py  engine.py  errors.py  ports.py  repository.py  uow.py
libs/db/tests/: test_async_engine.py  test_async_repository.py  test_import.py  test_sync_repository.py
projects/server/: alembic.ini  pyproject.toml
projects/server/src/adapters/agent/: factory.py  orchestration_tools.py  provision.py  secrets_resolver.py
projects/server/src/adapters/bus/: factory.py  ports.py  sql.py
projects/server/src/adapters/database/: bus_source.py  engine.py  event_log_source.py  orm.py  ports.py  repositories.py  repository.py  uow.py
projects/server/src/adapters/dispatcher/: cursor_store.py
projects/server/src/adapters/security/: cipher.py
projects/server/src/adapters/storage/: factory.py  keys.py
projects/server/src/domain/: base.py  board.py  dashboard.py  errors.py  hierarchy.py  live_agents.py  pricing.py  project.py  team.py  transitions.py  work_item.py
projects/server/src/domain/agent/: context.py  events.py  llm.py  orchestration.py  prompts.py  runtime.py  tool_loop.py  tools.py  workspace.py
projects/server/src/domain/attachments/: attachment.py  validation.py
projects/server/src/domain/messaging/: chat.py  context.py  dispatch.py  mentions.py  message.py  orchestrator.py  question.py  source.py  subscriber.py  thread.py
projects/server/src/domain/notifications/: notification.py
projects/server/src/domain/runs/: coupling.py  events.py  gates.py  messages.py  pipeline.py  run.py
projects/server/src/domain/secrets/: secret.py
projects/server/src/interactors/api/: app.py  auth.py  contract.py  deps.py  envelope_handlers.py  mappers.py  run_start.py  schemas.py  settings.py
projects/server/src/interactors/cli/: gen_secret_key.py  seed.py
projects/server/src/interactors/dispatcher/: dispatcher.py  registry.py  subscriber.py
projects/server/src/interactors/mcp/: server.py  tools.py
projects/server/src/interactors/worker/: agent_subscriber.py  bus_source.py  celery_app.py  handlers.py  main.py  processor.py  pubsub.py  registry.py  subscription_runner.py
projects/server/src/migrations/: env.py
projects/server/src/migrations/versions/: 0001_initial.py
projects/server/tests/: conftest.py  test_smoke.py
projects/server/tests/adapters/: test_attachment_repository.py  test_migrations.py  test_repository.py  test_storage_factory.py  test_uow.py
projects/server/tests/adapters/agent/: test_adapter_streaming.py  test_build_agent_deps.py  test_claude_cli_adapter.py  test_claude_cli_wiring.py  test_claude_oauth_secret.py  test_ctx_orchestration_tools.py  test_echo_responder.py  test_event_sink_passthrough.py  test_factory.py  test_fake_runtime.py  test_global_agent_deps.py  test_llm_responder.py  test_orchestrator.py  test_provision.py  (+5 more)
projects/server/tests/api/: test_activity_stream.py  test_activity_stream_async.py  test_activity_stream_concurrency.py  test_app.py  test_async_dep.py  test_contract_api.py  test_mappers.py  test_notifications_api.py  test_owner_scoping.py  test_project_thread_api.py  test_projects_api.py  test_run_events_stream_async.py  test_runs_api.py  test_runs_sse.py  test_secrets_api.py  test_settings.py  test_teams_api.py  test_threads_api.py  test_work_items_api.py
projects/server/tests/cli/: test_gen_secret_key.py  test_seed.py
projects/server/tests/domain/: test_attachment_validation.py  test_attachments_prompt.py  test_board.py  test_dashboard.py  test_hierarchy.py  test_live_agents.py  test_pricing.py  test_project.py  test_project_key.py  test_team.py  test_transitions.py  test_work_item.py
projects/server/tests/integration/: test_claude_live.py
projects/server/tests/interactors/: test_settings.py
(+456 files in other folders)
