[project]
name = "naaf"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["projects/server", "libs/crud_router"]

[tool.uv.sources]
naaf-server = { workspace = true }
naaf-crud-router = { workspace = true }

[dependency-groups]
dev = [
    "naaf-server",
    "naaf-crud-router",
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["projects/server/tests", "libs/crud_router/tests"]
addopts = "-q --import-mode=importlib"
filterwarnings = ["ignore:Using `httpx` with `starlette.testclient`"]

[tool.coverage.run]
source = ["domain", "adapters", "interactors", "crud_router"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
