[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naaf-db"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "pydantic>=2.7",
    "greenlet>=3.0",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "aiosqlite>=0.20"]

[tool.hatch.build.targets.wheel]
packages = ["src/naaf_db"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
