[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naaf-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "naaf-crud-router",
    "sse-starlette>=2.1",
    "celery>=5.4",
    "redis>=5",
    "anthropic>=0.40",
    "storage",
    "naaf-db",
    "python-multipart>=0.0.9",
    "cryptography>=43",
    "mcp>=1.2",
]

[tool.uv.sources]
naaf-crud-router = { workspace = true }
storage = { workspace = true }
naaf-db = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/domain", "src/adapters", "src/interactors"]
